--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 body {
   font-family: "Open Sans Condensed", sans-serif;
-  padding: 2px 60px;
+  padding: 20px 60px;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
