--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -2,8 +2,8 @@
   min-width: 30%;
   height: 240px;
   flex: 1 1 auto;
-  align-items: center;
   display: flex;
+  align-items: center;
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
@@ -29,15 +29,18 @@
   &:first-child {
     margin-right: 7.5px;
   }
+
   &:last-child {
     margin-left: 7.5px;
   }
+
   .background-image {
     width: 100%;
     height: 100%;
-    background-position: center;
     background-size: cover;
+    background-position: center;
   }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -49,15 +52,17 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
-  }
-  .title {
-    font-weight: bold;
-    margin-bottom: 6px;
-    font-size: 22px;
-    color: #4a4a4a;
-  }
-  .subtitle {
-    font-weight: lighter;
-    font-size: 16px;
+
+    .title {
+      font-weight: bold;
+      margin: 0 6px 0;
+      font-size: 22px;
+      color: #4a4a4a;
+    }
+
+    .subtitle {
+      font-weight: lighter;
+      font-size: 16px;
+    }
   }
 }
