--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,23 @@
 body {
   font-family: "Open Sans Condensed", sans-serif;
   padding: 20px 60px;
+  animation: fade 1s ease forwards;
 }
 a {
   text-decoration: none;
   color: black;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+    pointer-events: none;
+  }
+  to {
+    opacity: 1;
+    pointer-events: all;
+  }
+}
+* {
+  box-sizing: border-box;
 }
